# IELTSSpeakingAssistant

./: .gitignore  build.gradle.kts  gradle.properties  settings.gradle.kts
.fleet/: receipt.json
.github/workflows/: swift.yml
composeApp/: build.gradle.kts  proguard-rules.pro
composeApp/release/: output-metadata.json
composeApp/release/baselineProfiles/0/: composeApp-release.dm
composeApp/release/baselineProfiles/1/: composeApp-release.dm
composeApp/src/androidMain/: AndroidManifest.xml
composeApp/src/androidMain/cpp/: CMakeLists.txt  native-lib.cpp
composeApp/src/androidMain/kotlin/com/boboor/speaking/: App.kt  MainActivity.kt  Platform.android.kt  getDataBase.kt
composeApp/src/androidMain/res/drawable/: ic_ielts_envelope.xml  ic_part_one.xml  ic_part_two.xml
composeApp/src/androidMain/res/values/: strings.xml
composeApp/src/appleMain/kotlin/com/boboor/speaking/: StatusBarTapListener.kt
composeApp/src/commonMain/composeResources/drawable/: ic_back_new.xml
composeApp/src/commonMain/kotlin/com/boboor/speaking/: App.kt  Platform.kt
composeApp/src/commonMain/sqldelight/com/boboor/: AppDatabase.sq  CommonTopic.sq
composeApp/src/desktopMain/kotlin/com/boboor/speaking/: Platform.desktop.kt  Platform.jvm.kt  main.kt
composeApp/src/iosMain/kotlin/com/boboor/speaking/: Platform.ios.kt  (+3 more)
gradle/: libs.versions.toml
iosApp/Configuration/: Config.xcconfig
iosApp/iosApp/: ContentView.swift  NativeLib.mm  NativeLibWrapper.swift  iosApp-Bridging-Header.h
iosApp/iosApp.xcodeproj/: project.pbxproj
iosApp/iosApp/statusbar/: StatusBarTapHandler.swift
(+127 files in other folders)
